--- a/pom.xml
+++ b/pom.xml
@@ -53,29 +53,36 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
             </plugin>
         </plugins>
     </build>
+    <reporting>
+             <plugins>
+                  <!-- Normally, we take off the dependency report, saves time. -->
+                 <plugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-project-info-reports-plugin</artifactId>
+                           <version>2.7</version>
+                           <configuration>
+                                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                           </configuration>
+                  </plugin>
+
+                  // integrate maven-cobertura-plugin to project site
+                  <plugin>
+                           <groupId>org.codehaus.mojo</groupId>
+                           <artifactId>cobertura-maven-plugin</artifactId>
+                           <version>2.6</version>
+                           <configuration>
+                                    <formats>
+                                             <format>html</format>
+                                             <format>xml</format>
+                                    </formats>
+                           </configuration>
+                      </plugin>
+              </plugins>
+     </reporting>
 
 </project>
